// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Amount /> currency renders amount in EUR 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      € 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> currency renders amount in INR 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> decimal formatting renders 3 digit amount with indian currency format 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      123
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> decimal formatting renders 4 digit amount with indian currency format 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> decimal formatting renders 5 digit amount with indian currency format 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      12,345
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> decimal formatting renders 6 digit amount with indian currency format 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,23,456
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> decimal formatting renders 7 digit amount with indian currency format 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      12,34,567
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> decimal formatting renders 8 digit amount with indian currency format 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,23,45,678
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> fractional formatting renders 0 digit fractional part 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      123
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> fractional formatting renders 1 digit fractional part 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      123
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .40
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> fractional formatting renders 2 digit fractional part 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      123
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .45
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> fractional formatting renders 3 digit fractional part 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      123
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .46
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> size with camel variant and subtle renders amount with large size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 12,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="large"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 12,
            "letterSpacing": 0,
            "lineHeight": 18,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> size with camel variant and subtle renders amount with medium size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> size with camel variant and subtle renders amount with xlarge size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="xlarge"
      _weight="bold"
      color="shade.950"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 30,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      color="shade.950"
      size="xlarge"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 20,
            "letterSpacing": 0,
            "lineHeight": 30,
          },
        ]
      }
      testID="ds-heading"
      weight="bold"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> size with camel variant and subtle renders amount with xxlarge size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="xxlarge"
      _weight="bold"
      color="shade.950"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 36,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      color="shade.950"
      size="xxlarge"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 24,
            "letterSpacing": 0,
            "lineHeight": 36,
          },
        ]
      }
      testID="ds-heading"
      weight="bold"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> size with camel variant and subtle renders amount with xxxlarge size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="xxlarge"
      _weight="bold"
      color="shade.950"
      size="large"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 36,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      color="shade.950"
      size="xxxlarge"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 32,
            "letterSpacing": 0,
            "lineHeight": 36,
          },
        ]
      }
      testID="ds-heading"
      weight="bold"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="large"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> size with camel variant renders amount with large size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 12,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="large"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 12,
            "letterSpacing": 0,
            "lineHeight": 18,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> size with camel variant renders amount with medium size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> size with camel variant renders amount with xlarge size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="xlarge"
      _weight="bold"
      color="shade.950"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 30,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      color="shade.980"
      size="xlarge"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 20,
            "letterSpacing": 0,
            "lineHeight": 30,
          },
        ]
      }
      testID="ds-heading"
      weight="bold"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> size with camel variant renders amount with xxlarge size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="xxlarge"
      _weight="bold"
      color="shade.950"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 36,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      color="shade.980"
      size="xxlarge"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 24,
            "letterSpacing": 0,
            "lineHeight": 36,
          },
        ]
      }
      testID="ds-heading"
      weight="bold"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> size with camel variant renders amount with xxxlarge size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="xxlarge"
      _weight="bold"
      color="shade.950"
      size="large"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 36,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      color="shade.980"
      size="xxxlarge"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 32,
            "letterSpacing": 0,
            "lineHeight": 36,
          },
        ]
      }
      testID="ds-heading"
      weight="bold"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="large"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> size with normal variant and subtle renders amount with large size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    _weight="bold"
    color="shade.960"
    size="large"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.54)",
          "fontFamily": "Lato-Bold",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-amount"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> size with normal variant and subtle renders amount with medium size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    _weight="bold"
    color="shade.960"
    size="medium"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.54)",
          "fontFamily": "Lato-Bold",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 20,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-amount"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> size with normal variant and subtle renders amount with xlarge size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="shade.960"
    size="xlarge"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.54)",
          "fontFamily": "Lato-Bold",
          "fontSize": 20,
          "letterSpacing": 0,
          "lineHeight": 30,
        },
      ]
    }
    testID="ds-amount"
    weight="bold"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> size with normal variant and subtle renders amount with xxlarge size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="shade.960"
    size="xxlarge"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.54)",
          "fontFamily": "Lato-Bold",
          "fontSize": 24,
          "letterSpacing": 0,
          "lineHeight": 36,
        },
      ]
    }
    testID="ds-amount"
    weight="bold"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> size with normal variant and subtle renders amount with xxxlarge size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="shade.960"
    size="xxxlarge"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.54)",
          "fontFamily": "Lato-Bold",
          "fontSize": 32,
          "letterSpacing": 0,
          "lineHeight": 36,
        },
      ]
    }
    testID="ds-amount"
    weight="bold"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> size with normal variant renders amount with large size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    _weight="bold"
    color="shade.980"
    size="large"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Bold",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-amount"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> size with normal variant renders amount with medium size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    _weight="bold"
    color="shade.980"
    size="medium"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Bold",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 20,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-amount"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> size with normal variant renders amount with xlarge size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="shade.980"
    size="xlarge"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Bold",
          "fontSize": 20,
          "letterSpacing": 0,
          "lineHeight": 30,
        },
      ]
    }
    testID="ds-amount"
    weight="bold"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> size with normal variant renders amount with xxlarge size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="shade.980"
    size="xxlarge"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Bold",
          "fontSize": 24,
          "letterSpacing": 0,
          "lineHeight": 36,
        },
      ]
    }
    testID="ds-amount"
    weight="bold"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> size with normal variant renders amount with xxxlarge size 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="shade.980"
    size="xxxlarge"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Bold",
          "fontSize": 32,
          "letterSpacing": 0,
          "lineHeight": 36,
        },
      ]
    }
    testID="ds-amount"
    weight="bold"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> variant renders camel variant amount 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> variant renders normal variant amount 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    _weight="bold"
    color="shade.980"
    size="medium"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Bold",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 20,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-amount"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> weight with camel variant and subtle renders bold amount 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> weight with camel variant and subtle renders regular amount 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="regular"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Regular",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="regular"
      color="shade.950"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Regular",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="regular"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Regular",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> weight with camel variant renders bold amount 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="bold"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> weight with camel variant renders regular amount 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Array [
          Object {
            "flexDirection": "column",
          },
        ],
      ]
    }
    testID="ds-amount"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _lineHeight="medium"
      _weight="regular"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Regular",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      ₹ 
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="regular"
      color="shade.980"
      size="medium"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Regular",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      1,234
    </Text>
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      _weight="regular"
      color="shade.950"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.38)",
            "fontFamily": "Lato-Regular",
            "fontSize": 10,
            "letterSpacing": 0,
            "lineHeight": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
    >
      .00
    </Text>
  </Text>
</View>
`;

exports[`<Amount /> weight with normal variant and subtle renders bold amount 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    _weight="bold"
    color="shade.960"
    size="medium"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.54)",
          "fontFamily": "Lato-Bold",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 20,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-amount"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> weight with normal variant and subtle renders regular amount 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    _weight="regular"
    color="shade.960"
    size="medium"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.54)",
          "fontFamily": "Lato-Regular",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 20,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-amount"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> weight with normal variant renders bold amount 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    _weight="bold"
    color="shade.980"
    size="medium"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Bold",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 20,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-amount"
  >
    ₹ 1,234.00
  </Text>
</View>
`;

exports[`<Amount /> weight with normal variant renders regular amount 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    _weight="regular"
    color="shade.980"
    size="medium"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Regular",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 20,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-amount"
  >
    ₹ 1,234.00
  </Text>
</View>
`;
